add consume free websocket

--- a/app-client/src/app/app.component.html
+++ b/app-client/src/app/app.component.html
@@ -1,5 +1,7 @@
 <a type="button" class="rounded-lg px-4 py-3 transition duration-500 ease-in-out text-white bg-blue-500 hover:bg-blue-400 focus:outline-none" routerLink="/example1"><button type="button" > Examble 1</button></a>
 <a type="button" class="rounded-lg px-4 py-3 transition duration-500 ease-in-out text-white bg-blue-500 hover:bg-red-400 focus:outline-none" routerLink="/example2"><button type="button" > Examble 2</button></a>
+<a type="button" class="rounded-lg px-4 py-3 transition duration-500 ease-in-out text-white bg-blue-500 hover:bg-red-400 focus:outline-none" routerLink="/example3"><button type="button" > Examble 3</button></a>
+
 <router-outlet></router-outlet>
 
 
